Bug 11983 - [Dialogs] DialogSettings.getBoolean() Should not create an instance of Boolean